# lovedevrobots

./: .gitignore  CLAUDE.md  README.md  README_FIRST_STEPS.md  pushprod.sh
backend/: pyproject.toml
backend/app/: main.py
backend/app/agent/: tools.py
backend/app/models/: __init__.py  part.py
backend/app/routers/: agent.py  assembly.py  exports.py  parts.py
backend/app/services/: assembler.py  catalogue.py
backend/tests/: test_connectors.py
catalogue/: connectors.yaml
catalogue/parts/: ARDUINO_MEGA_2560.json  BRACKET_C_MEDIUM.json  BRACKET_U_SMALL.json  DYNAMIXEL_MX28.json  DYNAMIXEL_U2D2.json  DYNAMIXEL_XC330.json  DYNAMIXEL_XL430.json  FEETECH_SCS0215.json  FEETECH_STS3032.json  FEETECH_STS3215.json  FEETECH_STS4215.json  FRAME_BASE_PLATE_150.json  FRAME_EXTRUSION_300.json  FRAME_EXTRUSION_400.json  GOBILDA_1101_0001_0008.json  GOBILDA_1101_0002_0016.json  GOBILDA_1101_0003_0024.json  GOBILDA_1101_0004_0032.json  GOBILDA_1101_0005_0040.json  GOBILDA_1101_0006_0048.json  GOBILDA_1101_0007_0056.json  GOBILDA_1101_0008_0064.json  GOBILDA_1101_0009_0072.json  GOBILDA_1101_0010_0080.json  GOBILDA_1101_0011_0088.json  GOBILDA_1101_0012_0096.json  GOBILDA_1101_0013_0104.json  GOBILDA_1101_0015_0120.json  GOBILDA_1101_0017_0136.json  GOBILDA_1101_0019_0152.json  GOBILDA_1101_0021_0168.json  GOBILDA_1101_0023_0184.json  (+286 more)
docs/: ROADMAP.md
frontend/: .env.example  next.config.js  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
scripts/: expand_catalogue.py  generate_part_stls.py  import_gobilda.py  tag_part.py  validate_catalogue.py
(+298 files in other folders)
